--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,15 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      - if @order_by==:title
+        %th.hilite= link_to "Movie Title", movies_path(:order_by=>:title), :id=>:title_header
+      - else
+        %th= link_to "Movie Title", movies_path(:order_by=>:title), :id=>:title_header
       %th Rating
-      %th Release Date
+      - if @order_by==:release_date
+        %th.hilite= link_to "Release Date", movies_path(:order_by=>:release_date), :id=>:release_date_header
+      - else
+        %th= link_to "Release Date", movies_path(:order_by=>:release_date), :id=>:release_date_header
       %th More Info
   %tbody
     - @movies.each do |movie|
