--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,14 +5,14 @@
   %thead
     %tr
       - if @order_by==:title
-        %th.hilite= link_to "Movie Title", movies_path(:order_by=>:title), :id=>:title_header
+        %th.hilite= link_to_movies_title
       - else
-        %th= link_to "Movie Title", movies_path(:order_by=>:title), :id=>:title_header
+        %th= link_to_movies_title
       %th Rating
       - if @order_by==:release_date
-        %th.hilite= link_to "Release Date", movies_path(:order_by=>:release_date), :id=>:release_date_header
+        %th.hilite= link_to_movies_release_date
       - else
-        %th= link_to "Release Date", movies_path(:order_by=>:release_date), :id=>:release_date_header
+        %th= link_to_movies_release_date
       %th More Info
   %tbody
     - @movies.each do |movie|
