--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,11 @@
   Include: 
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", 1, params[:ratings][rating]=='1'
+    - if params[:ratings]
+      = check_box_tag "ratings[#{rating}]", 1, params[:ratings][rating]=='1'
+    - else
+      = check_box_tag "ratings[#{rating}]"
+  = hidden_field_tag "order_by", params[:order_by]
   = submit_tag 'Refresh'
 
 %table#movies
