--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,7 +1,7 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
 
-= form_tag movies_path, :method => :get do
+= form_tag movies_path, :method => :get, :id=>:ratings_form do
   Include: 
   - @all_ratings.each do |rating|
     = rating
@@ -10,7 +10,7 @@
     - else
       = check_box_tag "ratings[#{rating}]"
   = hidden_field_tag "order_by", params[:order_by]
-  = submit_tag 'Refresh'
+  = submit_tag 'Refresh', :id=>:ratings_submit
 
 %table#movies
   %thead
